--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -25,7 +25,7 @@
                             <a href="{% url 'notificaciones:definir' %}"><i class="fa fa-chevron-circle-right"></i> Enviar</a>
                         </li>
                         <li class="notificaciones">
-                            <a id="open_notificaciones_modal"><i class="fa fa-bars"></i> Historial</a>
+                            <a href='#' id="open_notificaciones_modal"><i class="fa fa-bars"></i> Historial</a>
                         </li>
                     </ul>
                 </li>
