--- a/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
@@ -11,7 +11,26 @@
     {% autopaginate results 20 %}
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Notificaciones para Edificios</h1>
+            <h1 class="page-header">
+                Notificaciones para Edificios
+                <div class="btn-group pull-right">
+                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Nueva Notificación <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li>
+                        <a href="{% url 'notificaciones:productos-edificios' %}">
+                            <i class="fa fa-archive"></i> Productos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'notificaciones:servicios-edificios' %}">
+                            <i class="fa fa-cog"></i> Servicios
+                        </a>
+                    </li>
+                  </ul>
+                </div>
+            </h1>
         </div>
     </div>
     <!--- formulario de busqueda --->
